A5_47/A5_47/A5_47.output
Terminals unused in grammar

    STRUCT
    WHILE
    IMPLIES
    BITWISE_OR
    FLOATING_CONSTANT


State 149 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 changetable: %empty

    4 primary_expression: IDENTIFIER
    5                   | INTEGER_CONSTANT
    6                   | CHARACTER_CONSTANT
    7                   | STRING_LITERAL
    8                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

    9 postfix_expression: primary_expression
   10                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
   11                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE

   12 argument_expression_list_opt: argument_expression_list
   13                             | %empty

   14 argument_expression_list: assignment_expression
   15                         | argument_expression_list COMMA assignment_expression

   16 unary_expression: postfix_expression
   17                 | unary_operator unary_expression

   18 unary_operator: BITWISE_AND
   19               | MUL
   20               | ADD
   21               | SUB
   22               | EXCLAIM

   23 multiplicative_expression: unary_expression
   24                          | multiplicative_expression MUL unary_expression
   25                          | multiplicative_expression DIV unary_expression
   26                          | multiplicative_expression MOD unary_expression

   27 additive_expression: multiplicative_expression
   28                    | additive_expression ADD multiplicative_expression
   29                    | additive_expression SUB multiplicative_expression

   30 relational_expression: additive_expression
   31                      | relational_expression BIT_SL additive_expression
   32                      | relational_expression BIT_SR additive_expression
   33                      | relational_expression LTE additive_expression
   34                      | relational_expression GTE additive_expression

   35 equality_expression: relational_expression
   36                    | equality_expression EQ M relational_expression
   37                    | equality_expression NEQ M relational_expression

   38 and_helper: logical_and_expression AND

   39 logical_and_expression: equality_expression
   40                       | and_helper M equality_expression

   41 or_helper: logical_or_expression OR

   42 logical_or_expression: logical_and_expression
   43                      | or_helper M logical_and_expression

   44 condition: logical_or_expression QUESTION

   45 conditional_expression: logical_or_expression
   46                       | condition M expression N COLON M conditional_expression

   47 assignment_expression: conditional_expression
   48                      | unary_expression ASSIGN assignment_expression

   49 expression: assignment_expression

   50 declaration: type_specifier init_declarator SEMICOLON

   51 init_declarator: declarator
   52                | declarator ASSIGN initializer

   53 type_specifier: VOID
   54               | CHAR
   55               | INT

   56 declarator: pointer direct_declarator
   57           | direct_declarator

   58 declarator_helper: IDENTIFIER ROUND_BRACKET_OPEN

   59 direct_declarator: IDENTIFIER
   60                  | IDENTIFIER SQUARE_BRACKET_OPEN INTEGER_CONSTANT SQUARE_BRACKET_CLOSE
   61                  | declarator_helper changetable parameter_list_opt ROUND_BRACKET_CLOSE

   62 pointer: MUL

   63 parameter_list_opt: parameter_list
   64                   | %empty

   65 parameter_list: parameter_declaration
   66               | parameter_list COMMA parameter_declaration

   67 parameter_declaration: type_specifier declarator
   68                      | type_specifier

   69 initializer: assignment_expression

   70 statement: compound_statement
   71          | expression_statement
   72          | selection_statement
   73          | iteration_statement
   74          | jump_statement

   75 compound_statement: CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

   76 block_item_list_opt: %empty
   77                    | block_item_list

   78 block_item_list: block_item
   79                | block_item_list M block_item

   80 block_item: declaration
   81           | statement

   82 expression_statement: expression SEMICOLON
   83                     | SEMICOLON

   84 if_helper: IF ROUND_BRACKET_OPEN expression

   85 selection_statement: if_helper ROUND_BRACKET_CLOSE M statement
   86                    | if_helper ROUND_BRACKET_CLOSE M statement N ELSE M statement

   87 iteration_statement: FOR ROUND_BRACKET_OPEN expression_statement M expression_statement M expression N ROUND_BRACKET_CLOSE M statement

   88 jump_statement: RETURN expression SEMICOLON
   89               | RETURN SEMICOLON

   90 translation_unit: external_declaration
   91                 | translation_unit external_declaration

   92 external_declaration: function_definition
   93                     | declaration

   94 function_definition: type_specifier declarator changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CHAR (258) 54
    ELSE (259) 86
    FOR (260) 87
    IF (261) 84
    INT (262) 55
    RETURN (263) 88 89
    STRUCT (264)
    VOID (265) 53
    WHILE (266)
    IDENTIFIER (267) 4 58 59 60
    STRING_LITERAL <char_value> (268) 7
    SQUARE_BRACKET_OPEN (269) 10 60
    SQUARE_BRACKET_CLOSE (270) 10 60
    ROUND_BRACKET_OPEN (271) 8 11 58 84 87
    ROUND_BRACKET_CLOSE (272) 8 11 61 85 86 87
    CURLY_BRACKET_OPEN (273) 75 94
    CURLY_BRACKET_CLOSE (274) 75 94
    IMPLIES (275)
    BITWISE_AND (276) 18
    MUL (277) 19 24 62
    ADD (278) 20 28
    SUB (279) 21 29
    EXCLAIM (280) 22
    DIV (281) 25
    MOD (282) 26
    BIT_SL (283) 31
    BIT_SR (284) 32
    LTE (285) 33
    GTE (286) 34
    EQ (287) 36
    NEQ (288) 37
    BITWISE_OR (289)
    AND (290) 38
    OR (291) 41
    QUESTION (292) 44
    COLON (293) 46
    SEMICOLON (294) 50 82 83 88 89
    ASSIGN (295) 48 52
    COMMA (296) 15 66
    THEN (297)
    INTEGER_CONSTANT <intval> (298) 5 60
    FLOATING_CONSTANT <char_value> (299)
    CHARACTER_CONSTANT <char_value> (300) 6


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    M <instr_number> (47)
        on left: 1
        on right: 36 37 40 43 46 79 85 86 87
    N <stat> (48)
        on left: 2
        on right: 46 86 87
    changetable (49)
        on left: 3
        on right: 61 94
    primary_expression <expr> (50)
        on left: 4 5 6 7 8
        on right: 9
    postfix_expression <A> (51)
        on left: 9 10 11
        on right: 10 11 16
    argument_expression_list_opt <num_params> (52)
        on left: 12 13
        on right: 11
    argument_expression_list <num_params> (53)
        on left: 14 15
        on right: 12 15
    unary_expression <A> (54)
        on left: 16 17
        on right: 17 23 24 25 26 48
    unary_operator <unaryOp> (55)
        on left: 18 19 20 21 22
        on right: 17
    multiplicative_expression <expr> (56)
        on left: 23 24 25 26
        on right: 24 25 26 27 28 29
    additive_expression <expr> (57)
        on left: 27 28 29
        on right: 28 29 30 31 32 33 34
    relational_expression <expr> (58)
        on left: 30 31 32 33 34
        on right: 31 32 33 34 35 36 37
    equality_expression <expr> (59)
        on left: 35 36 37
        on right: 36 37 39 40
    and_helper <expr> (60)
        on left: 38
        on right: 40
    logical_and_expression <expr> (61)
        on left: 39 40
        on right: 38 42 43
    or_helper <expr> (62)
        on left: 41
        on right: 43
    logical_or_expression <expr> (63)
        on left: 42 43
        on right: 41 44 45
    condition <expr> (64)
        on left: 44
        on right: 46
    conditional_expression <expr> (65)
        on left: 45 46
        on right: 46 47
    assignment_expression <expr> (66)
        on left: 47 48
        on right: 14 15 48 49 69
    expression <expr> (67)
        on left: 49
        on right: 8 10 46 82 84 87 88
    declaration (68)
        on left: 50
        on right: 80 93
    init_declarator <symp> (69)
        on left: 51 52
        on right: 50
    type_specifier (70)
        on left: 53 54 55
        on right: 50 67 68 94
    declarator <symp> (71)
        on left: 56 57
        on right: 51 52 67 94
    declarator_helper <symp> (72)
        on left: 58
        on right: 61
    direct_declarator <symp> (73)
        on left: 59 60 61
        on right: 56 57
    pointer <sym_type> (74)
        on left: 62
        on right: 56
    parameter_list_opt (75)
        on left: 63 64
        on right: 61
    parameter_list (76)
        on left: 65 66
        on right: 63 66
    parameter_declaration (77)
        on left: 67 68
        on right: 65 66
    initializer <symp> (78)
        on left: 69
        on right: 52
    statement <stat> (79)
        on left: 70 71 72 73 74
        on right: 81 85 86 87
    compound_statement <stat> (80)
        on left: 75
        on right: 70
    block_item_list_opt <stat> (81)
        on left: 76 77
        on right: 75 94
    block_item_list <stat> (82)
        on left: 78 79
        on right: 77 79
    block_item <stat> (83)
        on left: 80 81
        on right: 78 79
    expression_statement <expr> (84)
        on left: 82 83
        on right: 71 87
    if_helper <expr> (85)
        on left: 84
        on right: 85 86
    selection_statement <stat> (86)
        on left: 85 86
        on right: 72
    iteration_statement <stat> (87)
        on left: 87
        on right: 73
    jump_statement <stat> (88)
        on left: 88 89
        on right: 74
    translation_unit (89)
        on left: 90 91
        on right: 0 91
    external_declaration (90)
        on left: 92 93
        on right: 90 91
    function_definition (91)
        on left: 94
        on right: 92


State 0

    0 $accept: . translation_unit $end

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    declaration           go to state 4
    type_specifier        go to state 5
    translation_unit      go to state 6
    external_declaration  go to state 7
    function_definition   go to state 8


State 1

   54 type_specifier: CHAR .

    $default  reduce using rule 54 (type_specifier)


State 2

   55 type_specifier: INT .

    $default  reduce using rule 55 (type_specifier)


State 3

   53 type_specifier: VOID .

    $default  reduce using rule 53 (type_specifier)


State 4

   93 external_declaration: declaration .

    $default  reduce using rule 93 (external_declaration)


State 5

   50 declaration: type_specifier . init_declarator SEMICOLON
   94 function_definition: type_specifier . declarator changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

    IDENTIFIER  shift, and go to state 9
    MUL         shift, and go to state 10

    init_declarator    go to state 11
    declarator         go to state 12
    declarator_helper  go to state 13
    direct_declarator  go to state 14
    pointer            go to state 15


State 6

    0 $accept: translation_unit . $end
   91 translation_unit: translation_unit . external_declaration

    $end  shift, and go to state 16
    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    declaration           go to state 4
    type_specifier        go to state 5
    external_declaration  go to state 17
    function_definition   go to state 8


State 7

   90 translation_unit: external_declaration .

    $default  reduce using rule 90 (translation_unit)


State 8

   92 external_declaration: function_definition .

    $default  reduce using rule 92 (external_declaration)


State 9

   58 declarator_helper: IDENTIFIER . ROUND_BRACKET_OPEN
   59 direct_declarator: IDENTIFIER .
   60                  | IDENTIFIER . SQUARE_BRACKET_OPEN INTEGER_CONSTANT SQUARE_BRACKET_CLOSE

    SQUARE_BRACKET_OPEN  shift, and go to state 18
    ROUND_BRACKET_OPEN   shift, and go to state 19

    $default  reduce using rule 59 (direct_declarator)


State 10

   62 pointer: MUL .

    $default  reduce using rule 62 (pointer)


State 11

   50 declaration: type_specifier init_declarator . SEMICOLON

    SEMICOLON  shift, and go to state 20


State 12

   51 init_declarator: declarator .
   52                | declarator . ASSIGN initializer
   94 function_definition: type_specifier declarator . changetable CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

    ASSIGN  shift, and go to state 21

    SEMICOLON  reduce using rule 51 (init_declarator)
    $default   reduce using rule 3 (changetable)

    changetable  go to state 22


State 13

   61 direct_declarator: declarator_helper . changetable parameter_list_opt ROUND_BRACKET_CLOSE

    $default  reduce using rule 3 (changetable)

    changetable  go to state 23


State 14

   57 declarator: direct_declarator .

    $default  reduce using rule 57 (declarator)


State 15

   56 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 9

    declarator_helper  go to state 13
    direct_declarator  go to state 24


State 16

    0 $accept: translation_unit $end .

    $default  accept


State 17

   91 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 91 (translation_unit)


State 18

   60 direct_declarator: IDENTIFIER SQUARE_BRACKET_OPEN . INTEGER_CONSTANT SQUARE_BRACKET_CLOSE

    INTEGER_CONSTANT  shift, and go to state 25


State 19

   58 declarator_helper: IDENTIFIER ROUND_BRACKET_OPEN .

    $default  reduce using rule 58 (declarator_helper)


State 20

   50 declaration: type_specifier init_declarator SEMICOLON .

    $default  reduce using rule 50 (declaration)


State 21

   52 init_declarator: declarator ASSIGN . initializer

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 38
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 41
    relational_expression      go to state 42
    equality_expression        go to state 43
    and_helper                 go to state 44
    logical_and_expression     go to state 45
    or_helper                  go to state 46
    logical_or_expression      go to state 47
    condition                  go to state 48
    conditional_expression     go to state 49
    assignment_expression      go to state 50
    initializer                go to state 51


State 22

   94 function_definition: type_specifier declarator changetable . CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 52


State 23

   61 direct_declarator: declarator_helper changetable . parameter_list_opt ROUND_BRACKET_CLOSE

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 64 (parameter_list_opt)

    type_specifier         go to state 53
    parameter_list_opt     go to state 54
    parameter_list         go to state 55
    parameter_declaration  go to state 56


State 24

   56 declarator: pointer direct_declarator .

    $default  reduce using rule 56 (declarator)


State 25

   60 direct_declarator: IDENTIFIER SQUARE_BRACKET_OPEN INTEGER_CONSTANT . SQUARE_BRACKET_CLOSE

    SQUARE_BRACKET_CLOSE  shift, and go to state 57


State 26

    4 primary_expression: IDENTIFIER .

    $default  reduce using rule 4 (primary_expression)


State 27

    7 primary_expression: STRING_LITERAL .

    $default  reduce using rule 7 (primary_expression)


State 28

    8 primary_expression: ROUND_BRACKET_OPEN . expression ROUND_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 38
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 41
    relational_expression      go to state 42
    equality_expression        go to state 43
    and_helper                 go to state 44
    logical_and_expression     go to state 45
    or_helper                  go to state 46
    logical_or_expression      go to state 47
    condition                  go to state 48
    conditional_expression     go to state 49
    assignment_expression      go to state 58
    expression                 go to state 59


State 29

   18 unary_operator: BITWISE_AND .

    $default  reduce using rule 18 (unary_operator)


State 30

   19 unary_operator: MUL .

    $default  reduce using rule 19 (unary_operator)


State 31

   20 unary_operator: ADD .

    $default  reduce using rule 20 (unary_operator)


State 32

   21 unary_operator: SUB .

    $default  reduce using rule 21 (unary_operator)


State 33

   22 unary_operator: EXCLAIM .

    $default  reduce using rule 22 (unary_operator)


State 34

    5 primary_expression: INTEGER_CONSTANT .

    $default  reduce using rule 5 (primary_expression)


State 35

    6 primary_expression: CHARACTER_CONSTANT .

    $default  reduce using rule 6 (primary_expression)


State 36

    9 postfix_expression: primary_expression .

    $default  reduce using rule 9 (postfix_expression)


State 37

   10 postfix_expression: postfix_expression . SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
   11                   | postfix_expression . ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
   16 unary_expression: postfix_expression .

    SQUARE_BRACKET_OPEN  shift, and go to state 60
    ROUND_BRACKET_OPEN   shift, and go to state 61

    $default  reduce using rule 16 (unary_expression)


State 38

   23 multiplicative_expression: unary_expression .
   48 assignment_expression: unary_expression . ASSIGN assignment_expression

    ASSIGN  shift, and go to state 62

    $default  reduce using rule 23 (multiplicative_expression)


State 39

   17 unary_expression: unary_operator . unary_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression  go to state 36
    postfix_expression  go to state 37
    unary_expression    go to state 63
    unary_operator      go to state 39


State 40

   24 multiplicative_expression: multiplicative_expression . MUL unary_expression
   25                          | multiplicative_expression . DIV unary_expression
   26                          | multiplicative_expression . MOD unary_expression
   27 additive_expression: multiplicative_expression .

    MUL  shift, and go to state 64
    DIV  shift, and go to state 65
    MOD  shift, and go to state 66

    $default  reduce using rule 27 (additive_expression)


State 41

   28 additive_expression: additive_expression . ADD multiplicative_expression
   29                    | additive_expression . SUB multiplicative_expression
   30 relational_expression: additive_expression .

    ADD  shift, and go to state 67
    SUB  shift, and go to state 68

    $default  reduce using rule 30 (relational_expression)


State 42

   31 relational_expression: relational_expression . BIT_SL additive_expression
   32                      | relational_expression . BIT_SR additive_expression
   33                      | relational_expression . LTE additive_expression
   34                      | relational_expression . GTE additive_expression
   35 equality_expression: relational_expression .

    BIT_SL  shift, and go to state 69
    BIT_SR  shift, and go to state 70
    LTE     shift, and go to state 71
    GTE     shift, and go to state 72

    $default  reduce using rule 35 (equality_expression)


State 43

   36 equality_expression: equality_expression . EQ M relational_expression
   37                    | equality_expression . NEQ M relational_expression
   39 logical_and_expression: equality_expression .

    EQ   shift, and go to state 73
    NEQ  shift, and go to state 74

    $default  reduce using rule 39 (logical_and_expression)


State 44

   40 logical_and_expression: and_helper . M equality_expression

    $default  reduce using rule 1 (M)

    M  go to state 75


State 45

   38 and_helper: logical_and_expression . AND
   42 logical_or_expression: logical_and_expression .

    AND  shift, and go to state 76

    $default  reduce using rule 42 (logical_or_expression)


State 46

   43 logical_or_expression: or_helper . M logical_and_expression

    $default  reduce using rule 1 (M)

    M  go to state 77


State 47

   41 or_helper: logical_or_expression . OR
   44 condition: logical_or_expression . QUESTION
   45 conditional_expression: logical_or_expression .

    OR        shift, and go to state 78
    QUESTION  shift, and go to state 79

    $default  reduce using rule 45 (conditional_expression)


State 48

   46 conditional_expression: condition . M expression N COLON M conditional_expression

    $default  reduce using rule 1 (M)

    M  go to state 80


State 49

   47 assignment_expression: conditional_expression .

    $default  reduce using rule 47 (assignment_expression)


State 50

   69 initializer: assignment_expression .

    $default  reduce using rule 69 (initializer)


State 51

   52 init_declarator: declarator ASSIGN initializer .

    $default  reduce using rule 52 (init_declarator)


State 52

   94 function_definition: type_specifier declarator changetable CURLY_BRACKET_OPEN . block_item_list_opt CURLY_BRACKET_CLOSE

    CHAR                shift, and go to state 1
    FOR                 shift, and go to state 81
    IF                  shift, and go to state 82
    INT                 shift, and go to state 2
    RETURN              shift, and go to state 83
    VOID                shift, and go to state 3
    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    CURLY_BRACKET_OPEN  shift, and go to state 84
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    SEMICOLON           shift, and go to state 85
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    $default  reduce using rule 76 (block_item_list_opt)

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 38
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 41
    relational_expression      go to state 42
    equality_expression        go to state 43
    and_helper                 go to state 44
    logical_and_expression     go to state 45
    or_helper                  go to state 46
    logical_or_expression      go to state 47
    condition                  go to state 48
    conditional_expression     go to state 49
    assignment_expression      go to state 58
    expression                 go to state 86
    declaration                go to state 87
    type_specifier             go to state 88
    statement                  go to state 89
    compound_statement         go to state 90
    block_item_list_opt        go to state 91
    block_item_list            go to state 92
    block_item                 go to state 93
    expression_statement       go to state 94
    if_helper                  go to state 95
    selection_statement        go to state 96
    iteration_statement        go to state 97
    jump_statement             go to state 98


State 53

   67 parameter_declaration: type_specifier . declarator
   68                      | type_specifier .

    IDENTIFIER  shift, and go to state 9
    MUL         shift, and go to state 10

    $default  reduce using rule 68 (parameter_declaration)

    declarator         go to state 99
    declarator_helper  go to state 13
    direct_declarator  go to state 14
    pointer            go to state 15


State 54

   61 direct_declarator: declarator_helper changetable parameter_list_opt . ROUND_BRACKET_CLOSE

    ROUND_BRACKET_CLOSE  shift, and go to state 100


State 55

   63 parameter_list_opt: parameter_list .
   66 parameter_list: parameter_list . COMMA parameter_declaration

    COMMA  shift, and go to state 101

    $default  reduce using rule 63 (parameter_list_opt)


State 56

   65 parameter_list: parameter_declaration .

    $default  reduce using rule 65 (parameter_list)


State 57

   60 direct_declarator: IDENTIFIER SQUARE_BRACKET_OPEN INTEGER_CONSTANT SQUARE_BRACKET_CLOSE .

    $default  reduce using rule 60 (direct_declarator)


State 58

   49 expression: assignment_expression .

    $default  reduce using rule 49 (expression)


State 59

    8 primary_expression: ROUND_BRACKET_OPEN expression . ROUND_BRACKET_CLOSE

    ROUND_BRACKET_CLOSE  shift, and go to state 102


State 60

   10 postfix_expression: postfix_expression SQUARE_BRACKET_OPEN . expression SQUARE_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 38
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 41
    relational_expression      go to state 42
    equality_expression        go to state 43
    and_helper                 go to state 44
    logical_and_expression     go to state 45
    or_helper                  go to state 46
    logical_or_expression      go to state 47
    condition                  go to state 48
    conditional_expression     go to state 49
    assignment_expression      go to state 58
    expression                 go to state 103


State 61

   11 postfix_expression: postfix_expression ROUND_BRACKET_OPEN . argument_expression_list_opt ROUND_BRACKET_CLOSE

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    $default  reduce using rule 13 (argument_expression_list_opt)

    primary_expression            go to state 36
    postfix_expression            go to state 37
    argument_expression_list_opt  go to state 104
    argument_expression_list      go to state 105
    unary_expression              go to state 38
    unary_operator                go to state 39
    multiplicative_expression     go to state 40
    additive_expression           go to state 41
    relational_expression         go to state 42
    equality_expression           go to state 43
    and_helper                    go to state 44
    logical_and_expression        go to state 45
    or_helper                     go to state 46
    logical_or_expression         go to state 47
    condition                     go to state 48
    conditional_expression        go to state 49
    assignment_expression         go to state 106


State 62

   48 assignment_expression: unary_expression ASSIGN . assignment_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 38
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 41
    relational_expression      go to state 42
    equality_expression        go to state 43
    and_helper                 go to state 44
    logical_and_expression     go to state 45
    or_helper                  go to state 46
    logical_or_expression      go to state 47
    condition                  go to state 48
    conditional_expression     go to state 49
    assignment_expression      go to state 107


State 63

   17 unary_expression: unary_operator unary_expression .

    $default  reduce using rule 17 (unary_expression)


State 64

   24 multiplicative_expression: multiplicative_expression MUL . unary_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression  go to state 36
    postfix_expression  go to state 37
    unary_expression    go to state 108
    unary_operator      go to state 39


State 65

   25 multiplicative_expression: multiplicative_expression DIV . unary_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression  go to state 36
    postfix_expression  go to state 37
    unary_expression    go to state 109
    unary_operator      go to state 39


State 66

   26 multiplicative_expression: multiplicative_expression MOD . unary_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression  go to state 36
    postfix_expression  go to state 37
    unary_expression    go to state 110
    unary_operator      go to state 39


State 67

   28 additive_expression: additive_expression ADD . multiplicative_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 111
    unary_operator             go to state 39
    multiplicative_expression  go to state 112


State 68

   29 additive_expression: additive_expression SUB . multiplicative_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 111
    unary_operator             go to state 39
    multiplicative_expression  go to state 113


State 69

   31 relational_expression: relational_expression BIT_SL . additive_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 111
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 114


State 70

   32 relational_expression: relational_expression BIT_SR . additive_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 111
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 115


State 71

   33 relational_expression: relational_expression LTE . additive_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 111
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 116


State 72

   34 relational_expression: relational_expression GTE . additive_expression

    IDENTIFIER          shift, and go to state 26
    STRING_LITERAL      shift, and go to state 27
    ROUND_BRACKET_OPEN  shift, and go to state 28
    BITWISE_AND         shift, and go to state 29
    MUL                 shift, and go to state 30
    ADD                 shift, and go to state 31
    SUB                 shift, and go to state 32
    EXCLAIM             shift, and go to state 33
    INTEGER_CONSTANT    shift, and go to state 34
    CHARACTER_CONSTANT  shift, and go to state 35

    primary_expression         go to state 36
    postfix_expression         go to state 37
    unary_expression           go to state 111
    unary_operator             go to state 39
    multiplicative_expression  go to state 40
    additive_expression        go to state 117


State 73

   36 equality_expression: equality_expression EQ . M relational_expression

    $default  reduce using rule 1 (M)

    M  go to state 118


State 74

   37 equality_expression: equality_expression NEQ . M relational_expression

    $default  reduce using rule 1 (M)

    M  go to state 119


State 75
